the pt_br manual didn't share the common structure

--- a/doc/info/pt_BR/maxima.texi
+++ b/doc/info/pt_BR/maxima.texi
@@ -21,905 +21,7 @@
 @documentlanguage pt_BR
 @set mail <maxima at math dot utexas dot edu>
 @settitle Manual do Maxima
-@c %**end of header
-@setchapternewpage odd
-@ifinfo
-Esse é um Manual do Maxima no formato Texinfo
-
-Copyright 1994,2001 William F. Schelter
-
-@format
-START-INFO-DIR-ENTRY
-* Maxima: (maxima).     Um sistema de álgebra computacional.
-END-INFO-DIR-ENTRY
-@end format
-@end ifinfo
-
-@ifinfo 
-@macro var {expr}
-<\expr\>
-@end macro
-@end ifinfo
-
-@titlepage
-@sp 10
-@comment The title is printed in a large font.
-@center @titlefont{Manual do Maxima}
-@page
-@vskip 0pt plus 1filll
-Maxima é um sistema de álgebra computacional, implementado em Lisp.
-
-Maxima é derivado do sistema Macsyma,
-desenvolvido no MIT nos anos de 1968 a 1982 como parte do Projeto MAC.
-MIT remanejou uma cópia do código fonte do Macsyma para o Departamento de Energia
-em 1982; aquela versão é agora conhecida como Macsyma DOE.
-Uma cópia do Macsyma DOE foi mantida pelo Professor William F. Schelter
-da Universidade do Texas de 1982 até sua morte em 2001.
-Em 1998, Schelter obteve permissão do Departamento de Energia
-para liberar o código fonte do Macsyma DOE sob a Licença Pública GNU,
-e em 2000 ele iniciou o projeto Maxima no SourceForge para manter
-e desenvolver o Macsyma DOE, agora chamado Maxima.
-
-Notas de tradução:
-
-Com o término da tradução inicia-se o processo de revisão da mesma.  Está
-aberta a temporada de caça aos erros de tradução, erros de hifenização e de adequação entre
-a linguagem matemática inglesa e a linguagem matemática brasileira. Caso você me
-envie alguma correção ou melhoria a comunidade matemática que utiliza o Sofware Livre
-lhe ficará muito grata ( e nós, da equipe do Maxima, também).
-
-O código fonte deste documento encontra-se no formato texinfo.  Para
-contribuir com a equipe do Maxima na tarefa de manter a tradução para o
-português sempre atualizada envie um e-mail para @value{mail}.
-
-Em caso de dúvida sobre algum trecho deste manual consulte o original
-inglês. Caso sua dúvida persista ou tenha alguma sugestão/aperfeiçoamento/
-crítica mande-nos um e-mail no endereço acima.
-
-Versão do manual no formato pdf: maxima.pdf
-
-Versão do manual no formato info: maxima-info.tar.gz
-
-Veja o arquivo AUTHORS para conhecer todos os mantenedores do Maxima.
-
-@end titlepage
-
-@summarycontents
-@contents
-
-@include category-macros.texi
-
-@ifnottex
-@node Top, Introdução ao Maxima, (dir), (dir)
-@top
-
-@i{Maxima é um sistema de álgebra computacional, implementado em Lisp.}
-
-Maxima é derivado do sistema Macsyma,
-desenvolvido no MIT nos anos de 1968 a 1982 como parte do Projeto MAC.
-MIT remanejou uma cópia do código fonte do Macsyma para o Departamento de Energia
-em 1982; aquela versão é agora conhecida como Macsyma DOE.
-Uma cópia do Macsyma DOE foi mantida pelo Professor William F. Schelter
-da Universidade do Texas de 1982 até sua morte em 2001.
-Em 1998, Schelter obteve permissão do Departamento de Energia
-para liberar o código fonte do Macsyma DOE sob a Licença Pública GNU,
-e em 2000 ele iniciou o projeto Maxima no SourceForge para manter
-e desenvolver o Macsyma DOE, agora chamado Maxima.
-
-@i{Notas de tradução:}
-
-    Com o término da tradução inicia-se o processo de revisão da mesma.  Está
- aberta a temporada de caça aos erros de tradução, erros de hifenização e de adequação entre
- a linguagem matemática inglesa e a linguagem matemática brasileira. Caso você me
- envie alguma correção ou melhoria a comunidade matemática que utiliza o Sofware Livre
- lhe ficará muito grata ( e nós, da equipe do Maxima, também).
-
-    O código fonte deste documento encontra-se no formato texinfo.
- Para contribuir com a equipe do Maxima na tarefa de manter a 
- tradução para o português sempre atualizada envie um 
- e-mail para @value{mail}.
-
- Em caso de dúvida sobre algum trecho deste manual consulte o original
- inglês. Caso sua dúvida persista ou tenha alguma sugestão/aperfeiçoamento/
- crítica mande-nos um e-mail no endereço acima.
-
-  Versão do manual no formato pdf: maxima.pdf
-
-  Versão do manual no formato info: maxima-info.tar.gz
-
-  Veja o arquivo AUTHORS para conhecer todos os mantenedores do Maxima.
-  
-@end ifnottex
-@c includes
-
-@menu
-Infraestrutura do Maxima
-
-* Introdução ao Maxima::        Exemplo de sessões do Maxima.
-* Detecção e Relato de Erros::  Encontrando e relatando erros no Maxima.
-* Ajuda::                       Solicitando ajuda de dentro de uma 
-                                sessão do Maxima.
-* Linha de Comando::            Sintaxe de linha de comando do Maxima.
-* Operadores::                  Operadores usados em expressões do Maxima.
-* Expressões::                  Expressões no Maxima.
-* Simplificação::               Simplificando expressões.
-* Montando Gráficos::           Saídas gráficas em 2D e 3D.
-* Entrada e Saída::             Entrada e saída de arquivos.
-* Ponto Flutuante::             Rotinas numéricas de baixo nível.
-* Contextos::                   Conjunto de fatos assumidos.
-
-Suporte a áreas específicas da matemática
-
-* Polinômios::                  Formas padrão para polinômios, e
-                                funções operando sobre polinômios.
-* Constantes::                  Constantes numéricas.
-* Logarítmos::                  Manipulação de expressões envolvendo
-                                logarítmos.
-* Trigonometria::               Manipulando expressões com trigonometria e
-                                Funções trigonométricas inversas.
-* Funções Especiais::           Funções especiais
-* Funções Elípticas::           Funções Elípticas e Integrais
-* Limites::                     Limites de expressões.
-* Diferenciação::               Cálculo diferencial.
-* Integração::                  Cálculo integral.
-* Equações::                    Definindo e resolvendo equações.
-* Equações Diferenciais::       Definindo e resolvendo equações diferenciais.
-* Numérico::                    Integração numérica, transformações
-                                de Fourier, etc.
-* Arrays ::                     Criando e trabalhando com arrays.
-* Matrizes e Álgebra Linear::   Operações com Matrizes.
-* Funções Afins::                        
-* itensor::                     Manipulação de índice de Tensores.
-* ctensor::                     Manipulação de componentes de Tensores.
-* Pacote atensor::              Manipulação de Tensores Algébricos.
-* Séries::                      Taylor e séries de potência.
-* Teoria dos Números::          Teoria dos números.
-* Simetrias::                   Polinômios simétricos
-* Grupos::                      Álgebra Abstrata.
-
-Facilidades avançadas e programação
-
-* Ambiente em Tempo de Execução:: Customização do ambiente Maxima.
-* Opções Diversas::             Opções com efeito global sobre o Maxima.
-* Regras e Modelos::            Coincidência de expressões definidas pelo utilizador e regras de simplificação.
-* Listas::                      Manipulação de listas.
-* Conjuntos::                   Manipulação de conjuntos.
-* Definição de Função::         Definindo funções.
-* Fluxo de Programa::           Definindo programas do Maxima.
-* Depurando::                   Depurando programas do Maxima.
-
-Pacotes Adicionais
-
-* augmented_lagrangian::        Pacote augmented_lagrangian.
-* bode::                        Gráficos de ganho e fase de Bode.
-* contrib_ode::                 Rotinas adicionais para EDOs
-* descriptive::                 Estatística descritiva.
-* diag::                        Matrizes de Jordan.
-* distrib::                     Distribuições de probabilidade.
-* draw::                        Uma interface Maxima-Gnuplot.
-* dynamics::                    Gráficos para sistemas dinâmicos e fractais.
-* eval_string::                 Expressões do Maxima como cadeias de texto.
-* f90::                         Tradutor do Maxima para o fortran.
-* ggf::                         Função geradora para sequências.
-* grobner::                     Funções para trabalhar com as bases de Groebner.
-* impdiff::                     Derivadas implícitas.
-* implicit_plot::               Gráficos implítos.
-* interpol::                    Pacote de interpolação.
-* lbfgs::                       L-BFGS pacote de minimização não limitada.
-* lindstedt::                   Pacote Lindstedt.
-* linearalgebra::               Funções de álgebra linear.
-* lsquares::                    Método dos mínimos quadrados.
-* makeOrders::                  Expoentes de polinômios.
-* mnewton::                     Método de Newton.
-* numericalio::                 Leitura e escritura de arquivos.
-* opsubst::                     Comandos para subsituições.
-* orthopoly::                   Polinómios ortogonais.
-* plotdf::                      Gráficos de campos de direcções.
-* romberg::                     Método de Romberg para integração numerica.
-* simplex::                     Programação linear.
-* simplification::              Funções e regras de simplificação.
-* solve_rec::                   Relações de recorrências lineares.
-* stats::                       Pacote de inferências estatísticas.
-* stirling::                    Fórmula de Stirling.
-* stringproc::                  Manipulação de seq@"{u}ências de caracteres.
-* unit::                        Pacote de unidades e dimensões.
-* zeilberger::                  Funções para somatórios hipergeométricos.
-
-
-Índice
-
-* Índice de Funções e Variáveis:: Índice::
-
-@comment @detailmenu
- --- Listagem de Nodos Detalhada ---
-
-Introdução
-
-* Introdução ao Maxima::
-
-Ajuda
-
-* Lisp e Maxima::            
-* Descartando::          
-* Documentação::               
-* Funções e Variáveis Definidas para Ajuda::        
-
-Linha de Comando
-
-* Introdução a Linha de Comando::  
-* Funções e Variáveis Definidas para Linha de Comando::  
-
-Operadores
-
-* N-Argumentos::                        
-* Operador não fixado::                       
-* Operador Pósfixado::                     
-* Operador Préfixado::                      
-* Operadores Aritméticos::    
-* Operadores Relacionais::   
-* Operadores Geral::
-
-Expressões
-
-* Introdução a Expressões::  
-* Complexo::                    
-* Desigualdade::      
-* Sintaxe::                     
-* Funções e Variáveis Definidas para Expressões::  
-
-Simplificação
-
-* Funções e Variáveis Definidas para Simplificação::  
-
-Montando Gráficos
-
-* Funções e Variáveis Definidas para Montagem de Gráficos::    
-
-Entrada e Saída
-
-* Comentários::
-* Arquivos::                       
-* Funções e Variáveis Definidas para Entrada e Saída::  
-
-Ponto Flutuante
-
-* Funções e Variáveis Definidas para ponto Flutuante::  
-
-Contextos
-
-* Funções e Variáveis Definidas para Contextos::    
-
-Polinômios
-
-* Introdução a Polinômios::  
-* Funções e Variáveis Definidas para Polinômios::  
-
-Constantes
-
-* Funções e Variáveis Definidas para Constantes::
-
-Logarítmos
-
-* Funções e Variáveis Definidas para Logarítmos::  
-
-Trigonometria
-
-* Introdução ao Pacote Trigonométrico::  
-* Funções e Variáveis Definidas para Trigonometria::  
-
-Funções Especiais
-
-* Introdução a Funções Especiais::  
-* Funções e Variáveis Definidas para Funções Especiais::  
-
-Funções Elípticas
-
-* Introdução a Funções Elípticas e Integrais::
-* Funções e Variáveis Definidas para Funções Elípticas::
-* Funções e Variáveis Definidas para Integrais Elípticas::
-
-Limites
-
-* Funções e Variáveis Definidas para Limites::      
-
-Diferenciação
-
-* Funções e Variáveis Definidas para Diferenciação::  
-
-Integração
-
-* Introdução a Integração::  
-* Funções e Variáveis Definidas para Integração::  
-
-Equações
-
-* Funções e Variáveis Definidas para Equações::   
-
-Equações Diferenciais
-
-* Introdução a Equações Diferenciais::
-* Funções e Variáveis Definidas para Equações Diferenciais::  
-
-Numérico
-
-* Introdução a Numérico::   
-* Pacotes de Fourier::                     
-* Funções e Variáveis Definidas para Numérico::   
-* Funções e Variáveis Definidas para Séries de Fourier::
-
-Arrays
-
-* Funções e Variáveis Definidas para Arrays::  
-
-Matrizes e Álgebra Linear
-
-* Introdução a Matrizes e Álgebra Linear::  
-* Ponto::                         
-* Vetores::                     
-* auto::
-* Funções e Variáveis Definidas para Matrizes e Álgebra Linear::  
-
-Funções Afins
-
-* Funções e Variáveis Definidas para Funções Afins::      
-
-itensor
-
-* Introdução a itensor::      
-* Funções e Variáveis Definidas para itensor::      
-
-ctensor
-
-* Introdução a ctensor::     
-* Funções e Variáveis Definidas para ctensor::     
-
-Pacote atensor
-
-* Introdução ao Pacote atensor::
-* Funções e Variáveis Definidas para o Pacote atensor::
-
-Séries
-
-* Introdução a Séries::      
-* Funções e Variáveis Definidas para Séries::      
-
-Teoria dos Números
-
-* Funções e Variáveis Definidas para Teoria dos Números::  
-
-Simetrias
-
-* Funções e Variáveis Definidas para Simetrias::  
-
-Grupos
-
-* Funções e Variáveis Definidas para Grupos::      
-
-Ambiente em Tempo de Execução
-
-* Introdução a Ambiente em Tempo de Execução::  
-* Interrupções::                  
-* Funções e Variáveis Definidas para Ambiente em Tempo de Execução::  
-
-Opções Diversas
-
-* Introdução a Opções Diversas::  
-* Compartilhado::                       
-* Funções e Variáveis Definidas para Opções Diversas::  
-
-Regras e Modelos
-
-* Introdução a Regras e Modelos::  
-* Funções e Variáveis Definidas para Regras e Modelos::  
-
-Listas
-
-* Introdução a Listas::
-* Funções e Variáveis Definidas para Listas::
-
-Conjuntos
-
-* Introdução a Conjuntos::       
-* Funções e Variáveis Definidas para Conjuntos::       
-
-Definição de Função
-
-* Introdução a Definição de Função::  
-* Função::                    
-* Macros::                      
-* Funções e Variáveis para Definição de Função::  
-
-Fluxo de Programa
-
-* Introdução a Fluxo de Programa::  
-* Funções e Variáveis Definidas para Fluxo de Programa::  
-
-Depurando
-
-* Funções e Variáveis Definidas para Depuração::   
-
-augmented_lagrangian
-
-* Funções e Variáveis Definidas para augmented_lagrangian::
-
-bode
-
-* Funções e Variáveis Definidas para bode::
-
-contrib_ode
-
-* Introdução a contrib_ode::
-* Funções e Variáveis Definidas para contrib_ode::
-* Possibilidades de melhorias em contrib_ode::
-* Casos de teste para contrib_ode::
-* Referências bibliográficas para contrib_ode::
-
-descriptive
-
-* Introdução ao pacote descriptive::
-* Funções e Variáveis Definidas para manipulação da dados::
-* Funções e Variáveis Definidas para estatística descritiva::
-* Funções e Variáveis Definidas específicas para estatística descritiva de várias variáveis::
-* Funções e Variáveis Definidas para gráficos estatísticos::
-
-diag
-
-* Funções e Variáveis Definidas para diag::
-
-distrib
-
-* Introdução a distrib::
-* Funções e Variáveis Definidas para distribuições contínuas::
-* Funções e Variáveis Definidas para distribuições discretas::
-
-draw
-
-* Introdução a draw::
-* Funções e Variáveis Definidas para draw::
-
-dynamics
-
-* Introdução a dynamics::
-* Funções e Variáveis Definidas para dynamics::
-
-eval_string
-
-* Funções e Variáveis Definidas para eval_string::
-
-f90
-
-* Funções e Variáveis Definidas para f90::
-
-ggf
-
-* Funções e Variáveis Definidas para ggf::
-
-grobner
-
-* Introdução a grobner::
-* Funções e Variáveis Definidas para grobner::
-
-impdiff
-
-* Funções e Variáveis Definidas para impdiff::
-
-implicit_plot
-
-* Funções e Variáveis Definidas para implicit_plot::
-
-interpol
-
-* Introdução a interpol::
-* Funções e Variáveis Definidas para interpol::
-
-lbfgs
-
-* Introdução a lbfgs::
-* Funções e Variáveis Definidas para lbfgs::
-
-lindstedt
-
-* Funções e Variáveis Definidas para lindstedt::
-
-linearalgebra
-
-* Introdução a linearalgebra::
-* Funções e Variáveis Definidas para linearalgebra::
-
-lsquares
-
-* Funções e Variáveis Definidas para lsquares::
-
-makeOrders
-
-* Funções e Variáveis Definidas para makeOrders::
-
-mnewton
-
-* Funções e Variáveis Definidas para mnewton::
-
-numericalio
-
-* Introdução a numericalio::
-* Funções e Variáveis Definidas para numericalio::
-
-opsubst
-
-* Funções e Variáveis Definidas para opsubst::
-
-orthopoly
-
-* Introdução a polinômios ortogonais::
-* Funções e Variáveis Definidas para polinômios ortogonais::
-
-plotdf
-
-* Introdução a plotdf::
-* Funções e Variáveis Definidas para plotdf::
-
-romberg
-
-* Funções e Variáveis Definidas para romberg::
-
-simplex
-
-* Introdução a simplex::
-* Funções e Variáveis Definidas para simplex::
-
-simplification
-
-* Introdução a simplification::
-* Funções e Variáveis Definidas para simplification::
-
-solve_rec
-
-* Introdução a solve_rec::
-* Funções e Variáveis Definidas para solve_rec::
-
-stats
-
-* Introdução a stats::
-* Funções e Variáveis Definidas para inference_result::
-* Funções e Variáveis Definidas para stats::
-* Funções e Variáveis Definidas para distribuições especiais::
-
-stirling
-
-* Funções e Variáveis Definidas para stirling::
-
-stringproc
-
-* Introdução a manipulação de seq@"{u}ências de caracteres::
-* Funções e Variáveis para entrada e saída::
-* Funções e Variáveis para caracteres::
-* Funções e Variáveis para seq@"{u}ências de caracteres::
-
-unit
-
-* Introdução a Units::       
-* Funções e Variáveis Definidas para Units::
-
-zeilberger
-
-* Introdução a zeilberger::
-* Funções e Variáveis Definidas para zeilberger::
-
-@comment @end detailmenu
-@end menu
-
-@c  Put the @node lines here, rather than in the @included files,
-@c  so emacs can automatically update them with C-c C-u C-e.
-@c  nota bene: C-c C-u C-a and texinfo-multiple-files-update will delete
-@c  the detailed node listing!
-
-@node Introdução ao Maxima, Detecção e Relato de Erros, Top, Top
-@chapter Introdução ao Maxima
-@include Introduction.texi
-
-@node Detecção e Relato de Erros, Ajuda, Introdução ao Maxima, Top
-@chapter Detecção e Relato de Erros
-@include Bugs.texi
-
-@node Ajuda, Linha de Comando, Detecção e Relato de Erros, Top
-@chapter Ajuda
-@include Help.texi
-
-@node Linha de Comando, Operadores, Ajuda, Top
-@chapter Linha de Comando
-@include Command.texi
-
-@node Operadores, Expressões, Linha de Comando, Top
-@chapter Operadores
-@include Operators.texi
-
-@node Expressões, Simplificação, Operadores, Top
-@chapter Expressões
-@include Expressions.texi
-
-@node Simplificação, Montando Gráficos, Expressões, Top
-@chapter Simplificação
-@include Simplification.texi
-
-@node Montando Gráficos, Entrada e Saída, Simplificação, Top
-@chapter Montando Gráficos
-@include Plotting.texi
-
-@node Entrada e Saída, Ponto Flutuante, Montando Gráficos, Top
-@chapter Entrada e Saída
-@include Input.texi
-
-@node Ponto Flutuante, Contextos, Entrada e Saída, Top
-@chapter Ponto Flutuante
-@include Floating.texi
-
-@node Contextos, Polinômios, Ponto Flutuante, Top
-@chapter Contextos
-@include Contexts.texi
-
-@node Polinômios, Constantes, Contextos, Top
-@chapter Polinômios
-@include Polynomials.texi
-
-@node Constantes, Logarítmos, Polinômios, Top
-@chapter Constantes
-@include Constants.texi
-
-@node Logarítmos, Trigonometria, Constantes, Top
-@chapter Logarítmos
-@include Logarithms.texi
-
-@node Trigonometria, Funções Especiais, Logarítmos, Top
-@chapter Trigonometria
-@include Trigonometric.texi
-
-@node Funções Especiais, Funções Elípticas, Trigonometria, Top
-@chapter Funções Especiais
-@include Special.texi
-
-@node Funções Elípticas, Limites, Funções Especiais, Top
-@chapter Funções Elípticas
-@include Elliptic.texi
-
-@node Limites, Diferenciação, Funções Elípticas, Top
-@chapter Limites
-@include Limits.texi
-
-@node Diferenciação, Integração, Limites, Top
-@chapter Diferenciação
-@include Differentiation.texi
-
-@node Integração, Equações, Diferenciação, Top
-@chapter Integração
-@include Integration.texi
-
-@node Equações, Equações Diferenciais, Integração, Top
-@chapter Equações
-@include Equations.texi
-
-@node Equações Diferenciais, Numérico, Equações, Top
-@chapter Equações Diferenciais
-@include Differential.texi
-
-@c @include NonCommutative.texi
-
-@node Numérico, Arrays, Equações Diferenciais, Top
-@chapter Numérico
-@include Numerical.texi
-
-@node Arrays, Matrizes e Álgebra Linear, Numérico, Top
-@chapter Arrays
-@include Arrays.texi
-
-@node Matrizes e Álgebra Linear, Funções Afins, Arrays, Top
-@chapter Matrizes e Álgebra Linear
-@include Matrices.texi
-
-@node Funções Afins, itensor, Matrizes e Álgebra Linear, Top
-@chapter Funções Afins
-@include Affine.texi
-
-@node itensor, ctensor, Funções Afins, Top
-@chapter itensor
-@include Itensor.texi
-
-@node ctensor, Pacote atensor, itensor, Top
-@chapter ctensor
-@include Ctensor.texi
-
-@node Pacote atensor, Séries, ctensor, Top
-@chapter Pacote atensor
-@include Atensor.texi
-
-@node Séries, Teoria dos Números, Pacote atensor, Top
-@chapter Séries
-@include Series.texi
-
-@node Teoria dos Números, Simetrias, Séries, Top
-@chapter Teoria dos Números
-@include Number.texi
-
-@node Simetrias, Grupos, Teoria dos Números, Top
-@chapter Simetrias
-@include Symmetries.texi
-
-@node Grupos, Ambiente em Tempo de Execução, Simetrias, Top
-@chapter Grupos
-@include Groups.texi
-
-@node Ambiente em Tempo de Execução, Opções Diversas, Grupos, Top
-@chapter Ambiente em Tempo de Execução
-@include Runtime.texi
-
-@node Opções Diversas, Regras e Modelos, Ambiente em Tempo de Execução, Top
-@chapter Opções Diversas
-@include Miscellaneous.texi
-
-@node Regras e Modelos, Listas, Opções Diversas, Top
-@chapter Regras e Modelos
-@include Rules.texi
-
-@node Listas, Conjuntos, Regras e Modelos, Top
-@chapter Listas
-@include Lists.texi
-
-@node Conjuntos, Definição de Função, Listas, Top
-@chapter Conjuntos
-@include nset.texi
-
-@node Definição de Função, Fluxo de Programa, Conjuntos, Top
-@chapter Definição de Função
-@include Function.texi
-
-@node Fluxo de Programa, Depurando, Definição de Função, Top
-@chapter Fluxo de Programa
-@include Program.texi
-
-@node Depurando, augmented_lagrangian, Fluxo de Programa, Top
-@chapter Depurando
-@include Debugging.texi
-
-@node augmented_lagrangian, bode, Depurando, Top
-@chapter augmented_lagrangian
-@include augmented_lagrangian.texi
-
-@node bode, contrib_ode, augmented_lagrangian, Top
-@chapter bode
-@include bode.texi
-
-@node contrib_ode, descriptive, bode, Top
-@chapter contrib_ode
-@include contrib_ode.texi
-
-@node descriptive, diag, contrib_ode, Top
-@chapter descriptive
-@include descriptive.texi
-
-@node diag, distrib, descriptive, Top
-@chapter diag
-@include diag.texi
-
-@node distrib, draw, diag, Top
-@chapter distrib
-@include distrib.texi
-
-@node draw, dynamics, distrib, Top
-@chapter draw
-@include draw.texi
-
-@node dynamics, eval_string, draw, Top
-@chapter dynamics
-@include dynamics.texi
-
-@node eval_string, f90, dynamics, Top
-@chapter eval_string
-@include eval_string.texi
-
-@node f90, ggf, eval_string, Top
-@chapter f90
-@include f90.texi
-
-@node ggf, grobner, f90, Top
-@chapter ggf
-@include ggf.texi
-
-@node grobner, impdiff, ggf, Top
-@chapter grobner
-@include grobner.texi
-
-@node impdiff, implicit_plot, grobner, Top
-@chapter impdiff
-@include impdiff.texi
-
-@node implicit_plot, interpol, impdiff, Top
-@chapter implicit_plot
-@include implicit_plot.texi
-
-@node interpol, lbfgs, implicit_plot, Top
-@chapter interpol
-@include interpol.texi
-
-@node lbfgs, lindstedt, interpol, Top
-@chapter lbfgs
-@include lbfgs.texi
-
-@node lindstedt, linearalgebra, lbfgs, Top
-@chapter lindstedt
-@include lindstedt.texi
-
-@node linearalgebra, lsquares, lindstedt, Top
-@chapter linearalgebra
-@include linearalgebra.texi
-
-@node lsquares, makeOrders, linearalgebra, Top
-@chapter lsquares
-@include lsquares.texi
-
-@node makeOrders, mnewton, lsquares, Top
-@chapter makeOrders
-@include makeOrders.texi
-
-@node mnewton, numericalio, makeOrders, Top
-@chapter mnewton
-@include mnewton.texi
-
-@node numericalio, opsubst, mnewton, Top
-@chapter numericalio
-@include numericalio.texi
-
-@node opsubst, orthopoly, numericalio, Top
-@chapter opsubst
-@include opsubst.texi
-
-@node orthopoly, plotdf, opsubst, Top
-@chapter orthopoly
-@include orthopoly.texi
-
-@node plotdf, romberg, orthopoly, Top
-@chapter plotdf
-@include plotdf.texi
-
-@node romberg, simplex, plotdf, Top
-@chapter romberg
-@include romberg.texi
-
-@node simplex, simplification, romberg, Top
-@chapter simplex
-@include simplex.texi
-
-@node simplification, solve_rec, simplex, Top
-@chapter simplification
-@include simplifications.texi
-
-@node solve_rec, stats, simplification, Top
-@chapter solve_rec
-@include solve_rec.texi
-
-@node stats, stirling, solve_rec, Top
-@chapter stats
-@include stats.texi
-
-@node stirling, stringproc, stats, Top
-@chapter stirling
-@include stirling.texi
-
-@node stringproc, unit, stirling, Top
-@chapter stringproc
-@include stringproc.texi
-
-@node unit, zeilberger, stringproc, Top
-@chapter unit
-@include unit.texi
-
-@node zeilberger, Índice de Funções e Variáveis, unit, Top
-@chapter zeilberger
-@include zeilberger.texi
-
-@node Índice de Funções e Variáveis,  , zeilberger, Top
-@chapter Índice de Funções e Variáveis
-@include Indices.texi
-
-@c end includes
-
+@include include-maxima.texi
 @bye
 
 
