--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+maxima (5.46.0-1) unstable; urgency=medium
+
+  * The newest upstream release
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Mon, 23 May 2020 07:28:14 +0000
+
 maxima (5.42.2-1) unstable; urgency=medium
 
   * The newest upstream release
