Add macros for producing A&S and DLMF links
The macros urlaands and urldlmf produce nice URL links that we can
click on in the HTML and pdf manual.  The info manual has the links
shown so the user can just cut-n-paste them to a browser.

Modified a couple references to A&S (Special.texi) and DLMF
(nset.texi) to use the macros to see how it looks.

--- a/doc/info/Special.texi
+++ b/doc/info/Special.texi
@@ -196,7 +196,7 @@ then the limit as @math{v} approaches @math{n} is taken.
 @deffn {Function} hankel_1 (@var{v}, @var{z})
 
 The Hankel function of the first kind of order @math{v} and argument @math{z}
-(A&S 9.1.3). @code{hankel_1} is defined as
+(@urlaands{9.1.3, 358}). @code{hankel_1} is defined as
 
 @example
    bessel_j(v,z) + %i * bessel_y(v,z)
@@ -2206,7 +2206,7 @@ shows.  Note that @var{L} is the generalized Laguerre polynomial.
 
 @deffn {Function} lambert_w (@var{z})
 The principal branch of Lambert's W function W(z), the solution of 
-@code{z = W(z) * exp(W(z))}.  (DLMF 4.13)
+@code{z = W(z) * exp(W(z))}.  (@urldlmf{4.13})
 @opencatbox{Categories:}
 @category{Special functions}
 @closecatbox
