--- a/doc/info/diag.texi
+++ b/doc/info/diag.texi
@@ -7,6 +7,7 @@
 
 
 @anchor{diag_function}
+@ptindex diag @subentry @code{diag}
 @deffn {Function} diag (@var{lm})
 Constructs a matrix that is the block sum of the elements of
 @var{lm}. The elements of @var{lm} are assumed to be matrices; if an
@@ -53,6 +54,7 @@ To use this function write first @code{load("diag")}.
 
 
 @anchor{JF}
+@ptindex diag @subentry @code{JF}
 @deffn {Function} JF (@var{lambda},@var{n})
 Returns the Jordan cell of order @var{n} with eigenvalue @var{lambda}.
 
@@ -86,6 +88,7 @@ To use this function write first @code{load("diag")}.
 
 
 @anchor{jordan}
+@ptindex diag @subentry @code{jordan}
 @deffn {Function} jordan (@var{mat})
 Returns the Jordan form of matrix @var{mat}, encoded as a list in a
 particular format. To get the corresponding matrix, call the function
@@ -162,6 +165,7 @@ To use this function write first @code{load("diag")}. See also @mref{dispJordan}
 
 
 @anchor{dispJordan}
+@ptindex diag @subentry @code{dispJordan}
 @deffn {Function} dispJordan (@var{l})
 Returns a matrix in Jordan canonical form (JCF) corresponding to the
 list of eigenvalues and multiplicities given by @var{l}. This list
@@ -202,6 +206,7 @@ To use this function write first @code{load("diag")}. See also @mref{jordan} and
 
 
 @anchor{minimalPoly}
+@ptindex diag @subentry @code{minimalPoly}
 @deffn {Function} minimalPoly (@var{l})
 Returns the minimal polynomial of the matrix whose Jordan form is
 described by the list @var{l}. This list should be in the format given
@@ -233,6 +238,7 @@ To use this function write first @code{load("diag")}. See also @mref{jordan} and
 @end deffn
 
 @anchor{ModeMatrix}
+@ptindex diag @subentry @code{ModeMatrix}
 @deffn {Function} ModeMatrix (@var{A}, [@var{jordan_info}])
 Returns an invertible matrix @var{M} such that @math{(M^^-1).A.M} is
 the Jordan form of @var{A}.
@@ -289,6 +295,7 @@ To use this function write first @code{load("diag")}. See also
 
 
 @anchor{mat_function}
+@ptindex diag @subentry @code{mat_function}
 @deffn {Function} mat_function (@var{f},@var{A})
 Returns @math{f(A)}, where @var{f} is an analytic function and @var{A}
 a matrix. This computation is based on the Taylor expansion of
